...
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <Button
                android:text="@string/campusNavInteractiveMapBtnText"
                android:layout_width="90dp"
                android:id="@+id/campusNavInteractiveMapBtn"
                android:layout_weight="1"
                android:textSize="12sp"
                android:background="@color/CampusNavigationColor"
                android:layout_marginRight="2.5dp"
                android:textColor="@color/TextWhite"
                android:textAllCaps="false"
...
