...
    android:layout_margin="5dp"

    android:orientation="horizontal"
        android:background="@color/TextWhite">

    <EditText
        android:id="@+id/searchBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:hint="@string/mapSearchHintText"
        android:textColorLink="@color/CampusNavigationColor" />


    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:onClick="onMapSearch"
        android:text="@string/mapSearchBtnText"
        android:background="@color/CampusNavigationColor"
...
